# examples

./: .gitignore  AGENTS.md  README.md  renovate.json
.github/: actionlint.yaml
.github/workflows/: actionlint.yml  gitleaks.yml  osv-scanner-nightly.yml  osv-scanner-pr.yml  trivy.yml
agent-frameworks/: README.md
agents/: README.md
agents/Startup_News_Scraper/: README.md  agentuity.yaml  package.json
agents/agent-riza/: .env.example  README.md  agentuity.yaml  package-lock.json  package.json
agents/agent-salesEngineer/: README.md
agents/agent-zep/: README.md  agentuity.yaml  main.py  pyproject.toml
agents/agent_claudeCode/: README.md  agentuity.yaml  main.py  pyproject.toml
agents/claude-code-agent/: README.md  package.json
agents/composio/: .env.example  README.md  agentuity.yaml  package-lock.json  package.json
agents/deep-research-js/: .gitignore  README.md  agentuity.yaml  index.ts  package-lock.json  package.json
agents/deep_research_py/: README.md  agentuity.yaml  main.py  pyproject.toml
agents/google-adk1/: README.md  agentuity.json  package.json
agents/tavily_agent/: README.md  agentuity.yaml  main.py  pyproject.toml
agents/tavily_agent/agentuity-agents/tavilyAgent/: agent.py
agents/tavily_agent/supplemental/db/: chroma.sqlite3
agentuity/: README.md
agentuity/sdk-py/basic-agent/: README.md  agentuity.yaml  pyproject.toml
agentuity/sdk-py/basic-agent/src/agents/basic-agent/: index.py
agentuity/sdk-py/key-value-storage/: README.md  agentuity.yaml  pyproject.toml
agentuity/sdk-py/key-value-storage/src/agents/key-value-storage/: index.py
content/: agentuity-context.txt
crewai/: README.md  agentuity.yaml
existing-apps/: README.md
existing-apps/nextjs/: README.md  package.json  tsconfig.json
existing-apps/tanstack-start/: README.md  package.json  tsconfig.json  vite.config.ts
existing-apps/turborepo/: .gitignore  README.md  package.json  tsconfig.base.json  turbo.json
features/: README.md
features/code-runner/: README.md  agentuity.config.ts  agentuity.json  package.json
features/opencode-assistant/: .gitignore  README.md  agentuity.config.ts  agentuity.json  app.ts  package.json
features/opencode-server/: README.md  agentuity.config.ts  package.json
features/research-agent/: .gitignore  README.md  agentuity.json  app.ts  package.json  tsconfig.json  vite.config.ts
features/scheduled-digest/: README.md  agentuity.json  package.json  tsconfig.json
features/web-explorer/: .env.example  README.md  agentuity.json  package.json
frameworks/: README.md
frameworks/agno/finance-agent/: .agentuity-crash-1756494133.json  .agentuity-crash-1756746738.json  .env.example  .gitignore  README.md  agentuity.yaml  pyproject.toml  requirements.txt  server.py  test_import.py
frameworks/agno/finance-agent/.agentuity/: config.json
frameworks/agno/finance-agent/agents/FinanceAgent/: agent.py  finance_agent.py
frameworks/agno/from-agno/examples/agentuity/sdk-py/vector-storage/: pyproject.toml
frameworks/agno/research-agent/: .agentuity-crash-1756999580.json  .editorconfig  AGENTS.md  README.md  agentuity.yaml  pyproject.toml  requirements.txt  server.py
frameworks/agno/research-agent/.agentuity/: config.json
frameworks/agno/research-agent/agents/ResearchAgent/: agent.py  research_agent.py
frameworks/agno/research-agent/agentuity_agents/ResearchAgent/: agent.py  research_agent.py
frameworks/agno/web-extraction-agent/: .env.example  AGENTS.md  README.md  agentuity.yaml  pyproject.toml
frameworks/agno/web-extraction-agent/agentuity_agents/WebExtractionAgent/: agent.py  web_extraction_agent.py
frameworks/autogen/chess-game/: .env.example  README.md  agentuity.yaml  pyproject.toml
frameworks/autogen/chess-game/agentuity_agents/ChessGame/: agent.py
frameworks/crewai/: .gitignore  README.md  agentuity.yaml  pyproject.toml
frameworks/crewai/email-auto-responder/: .gitignore  README.md  agentuity.yaml  pyproject.toml  server.py
frameworks/crewai/email-auto-responder/agents/EmailAutoResponder/: agent.py  email_filter_crew.py  types.py
frameworks/crewai/email-auto-responder/agents/EmailAutoResponder/config/: agents.yaml  tasks.yaml
frameworks/crewai/email-auto-responder/agents/EmailAutoResponder/tools/: create_draft.py
frameworks/crewai/email-auto-responder/agents/EmailAutoResponder/utils/: emails.py
frameworks/crewai/researcher/: README.md  agentuity.yaml  pyproject.toml
frameworks/crewai/researcher/src/agents/crewai-agent/: crew.py
frameworks/langchain/: README.md  agentuity.yaml
frameworks/langgraph/: README.md  agentuity.yaml  package-lock.json
frameworks/llamaindex/: README.md  agentuity.yaml
frameworks/mastra/: README.md  agentuity.yaml  blog-post.mdx  package-lock.json
frameworks/pydantic/: README.md  agentuity.yaml
frameworks/vercel/: README.md  agentuity.yaml  package-lock.json
integrations/: README.md
langchain/: README.md  agentuity.yaml  pyproject.toml
llamaindex/: README.md  index.py
other-examples/: README.md
other-examples/llamaindex-tools/: agentuity.yaml  pyproject.toml
patterns/: README.md
training/: README.md
tutorials/: README.md
vercel-ai-sdk/: README.md  agentuity.yaml  package.json
(+1019 files in other folders)
