[project]
name = "py-langchain"
version = "0.0.1"
description = "LangChain framework example for Agentuity Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "agentuity>=0.0.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
