[project]
name = "py-basic-agent"
version = "0.0.1"
description = "Basic agent example for Agentuity Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "agentuity>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
