[project]
name = "agno-research-agent"
version = "0.1.0"
description = "Agno Research Agent - Professional investigative journalism with web search and article extraction"
requires-python = ">=3.10, <3.13"
dependencies = [
    "agentuity>=0.0.106",
    "agno>=2.1.0",
    "openai>=1.107.3",
    "duckduckgo-search>=7.0.0",
    "newspaper4k>=0.9.3",
    "lxml_html_clean>=0.4.1",
]
