[project]
name = "autogen-chess-game"
version = "0.1.0"
description = "AutoGen Chess Game Agent - demonstrates multi-agent chess gameplay using Microsoft's AutoGen framework"
requires-python = ">=3.10, <3.13"
dependencies = [
    "agentuity>=0.0.106",
    "openai>=1.107.3",
    "autogen-core>=0.4.0",
    "chess>=1.11.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]
