[project]
name = "py-crewai"
version = "0.0.1"
description = "CrewAI framework example for Agentuity Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "agentuity>=0.0.1",
    "crewai>=0.28.0",
    "langchain-openai>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
